tests/sksl/errors/ArrayTooManyDimensionsInFuncBodyUnsized1.glsl
### Compilation failed:

error: 1: unsized arrays are not permitted here
void func() { float x[][2]; }
              ^^^^^^^^^
1 error
